--- a/app/globals.css
+++ b/app/globals.css
@@ -21,5 +21,40 @@ body {
 }
 
 .prose > h2 {
-    font-size: 3rem;
+    font-size: 1.75rem;
+    font-weight: 600;
+}
+.prose > h3 {
+    font-size: 1.55rem;
+    font-weight: 500;
+}
+
+.prose > h4 {
+    font-size: 1.45rem;
+    font-weight: 400;
+}
+
+.prose > ul {
+    list-style-type: disc;
+    padding-left: 1.5rem;
+}
+
+.prose > ol {
+    list-style-type: decimal;
+    padding-left: 1.5rem;
+}
+
+.prose > blockquote {
+    border-left: 4px solid var(--foreground);
+    padding-left: 1rem;
+    margin-left: 0;
+    > p {
+        font-style: italic;
+    }
+}
+
+.prose > p > a {
+    color: var(--foreground);
+    text-decoration: underline;
+    cursor: pointer;
 }
